# egg

./: .gitignore  README.md  requirements.txt
egg/: pyproject.toml
egg/output/: ga_results_04272021-174923.csv  ga_results_04272021-175759.csv  ga_results_04272021-182254.csv  ga_results_04272021-182758.csv  ga_results_04272021-184812.csv  ga_results_04272021-185555.csv  ga_results_04272021-185846.csv  ga_results_04272021-190617.csv  ga_results_04272021-191254.csv  ga_results_04272021-191945.csv  ga_results_04272021-193237.csv  ga_results_04272021-193651.csv  ga_results_04272021-193815.csv  ga_winner_04272021-175759.json  ga_winner_04272021-175924.json  ga_winner_04272021-183533.json  ga_winner_04272021-183859.json  ga_winner_04272021-184449.json  ga_winner_04272021-185314.json  ga_winner_04272021-190355.json  ga_winner_04272021-190617.json  ga_winner_04272021-191418.json  ga_winner_04272021-191945.json  ga_winner_04272021-192240.json  ga_winner_04272021-192533.json  ga_winner_04272021-193651.json  ga_winner_04272021-193815.json
egg/src/: main.py
guigen/: pyproject.toml
guigen/output/: ga_results_04272021-175546.csv  ga_results_04272021-175924.csv  ga_results_04272021-180137.csv  ga_results_04272021-183533.csv  ga_results_04272021-183859.csv  ga_results_04272021-184449.csv  ga_results_04272021-185035.csv  ga_results_04272021-185314.csv  ga_results_04272021-190053.csv  ga_results_04272021-190355.csv  ga_results_04272021-191418.csv  ga_results_04272021-191538.csv  ga_results_04272021-191656.csv  ga_results_04272021-191814.csv  ga_results_04272021-192113.csv  (+34 more)
(+38 files in other folders)
