[tool.poetry]
name = "guigen"
version = "0.1.0"
description = ""
authors = ["Tabor Kvanicka <kamakwazee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
